Load ui.js in the HTML file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rose</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="p5.tools/ui.js" type="text/javascript"></script>
     <script src="p5.tools/color-correction.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
     <style>
